components/card.css
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #f3edc8;
  margin-top: 0.75rem;
  margin-left: 0.75rem;
  margin-right: 0.75rem;
  padding: 0.5rem;
  border-radius: 8px;
}

/* Make sure the last card is not covered by the footer */
.card:last-child {
  margin-bottom: 50px;
}

.bookmark {
  position: absolute;
  top: 5px;
  right: 10px;
}

